app/components/styles/ChatContainer.scss
$chatContainerBottomRight: 24px;

.ChatContainer {
  &.hidden {
    display: none;
  }

  &.standaloneMode {
    width: 100vw !important;
    height: 100vh !important;
    max-width: none !important;
    max-height: none !important;
    margin: 0;
    padding: 0;
    position: initial;
    right: 0;
    bottom: 0;
    border: none;
    border-radius: 0;
    animation: none;
  }

  // width and max-height set with inline style through config
  height: calc(100vh - 132px);
  position: fixed;
  right: $chatContainerBottomRight;
  bottom: 108px;
  border-radius: 5px;
  overflow: hidden;
  box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
  animation: 0.3s chatDialogOpen 1;
  display: flex;
  flex-direction: column;
  background: #f4f4f8;

  &.hasCustomLauncher {
    bottom: $chatContainerBottomRight;
  }

  .chatContainerBody {
    flex: 1 1 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
  }

  .banner,
  .errorBanner {
    flex: 0 0 auto;
    color: #fff;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-weight: 300;
    font-size: 14px;
    padding: 0 30px;
    align-items: stretch;
  }

  .banner {
    background: #59ad5d;
    height: 60px;
  }

  .errorBanner {
    background: #ad2215;
    height: 50px;
  }
}

.noFlexbox .ChatContainer {
  // Default demensions
  width: 400px;
  height: 600px;

  .banner,
  .errorBanner {
    width: 342px;
    max-width: 342px;
    min-width: 342px;
    text-align: center;
  }

  .banner,
  .errorBanner {
    position: absolute;
    top: 30px;
    height: 50px;
    min-height: 50px;
    max-height: 50px;
    display: table;

    span {
      display: table-cell;
      vertical-align: middle;
    }
  }
}

